--- a/src/components/galeria/AlbumGrid.astro
+++ b/src/components/galeria/AlbumGrid.astro
@@ -1,6 +1,5 @@
 ---
 import type { Album } from '@/types/strapi';
-import { STRAPI_URL } from 'astro:env/server';
 
 interface Props {
   albumes: Album[];
@@ -39,7 +38,7 @@ function formatearFecha(fecha: string): string {
                             <div class="h-72 w-full relative overflow-hidden">
                                 {portada && (
                                     <img
-                                        src={STRAPI_URL + portada.formats.small.url}
+                                        src={portada.formats.small.url}
                                         alt={album.Nombre}
                                         width={portada.formats.small.width}
                                         height={portada.formats.small.height}
