--- a/src/components/temporada/SeasonDates.astro
+++ b/src/components/temporada/SeasonDates.astro
@@ -50,7 +50,7 @@ function formatearFecha(fechaISO: string): string {
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
                     <!-- Inicio de Temporada -->
                     <article class="border-2 border-secondary rounded-3xl p-8 hover:shadow-secondary hover:shadow transition-all duration-300">
-                        <h3 class="text-pri1265  mary text-outline-2 font-atma font-bold text-3xl mb-4">Inicio de temporada:</h3>
+                        <h3 class="text-primary text-outline-2 font-atma font-bold text-3xl mb-4">Inicio de temporada:</h3>
                         <p class="text-white text-5xl font-bold">{formatearFecha(fecha.Inicio)}</p>
                     </article>
 
